# pong

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  Pong.c  Pong.h  ball.c  ball.h  color.h  config.c  config.h  main.c  paddle.c  paddle.h  pong.c  pong.h  preferences.c  preferences.h  properties.c  properties.h  scoreboard.c  scoreboard.h
